--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,41 @@ body {
     font-size: 14px;
 }
 
+p {
+    color: #595555;
+}
+
+.p-18-center {
+    color: #0c5e69;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 0px;
+}
+
+.p-20-just {
+    color: #595555;
+    text-align: justify;
+    font-size: 20px;
+}
+
+h1 {
+    color: #0c5e69;
+    text-align: center;
+    font-size: 34px;
+}
+
+h2 {
+    color: #595555;
+    text-align: center;
+    font-size: 20px;
+}
+
+.h2-section-c-content {
+    color: #ffffff;
+    text-align: center;
+    font-size: 20px;
+}
+
 header {
     width: 100%;
     height: 60px;
@@ -28,7 +63,7 @@ section {
 
 .section-a {
     padding: 50px 10%;
-    background: linear-gradient(rgba(236, 241, 236, 0.9), rgba(236, 241, 236, 0.9)), 
+    background: linear-gradient(rgba(236, 241, 236, 0.8), rgba(236, 241, 236, 0.8)), 
     url(../image/perguntas.png); 
     background-repeat: no-repeat;
     background-position: 50% 10%;
@@ -40,10 +75,15 @@ section {
     padding: 30px 15%;
 }
 
+.section-c {
+    display: block;
+    padding: 30px 5%;
+}
+
 .section-a-button {
     padding: 10px 10px;
     margin-top: 0px;
-    border: 0px solid #0c5e69;
+    border: 0px solid #033a41;
     background: #0c5e69;
     text-decoration: none;
     color: #ffffff;
@@ -51,11 +91,11 @@ section {
     /* cantos arredondados */
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
-    border-radius: 10px;
+    border-radius: 10px; 
 }
 
 .section-a-button:hover {
-    background: #06ae65;
+    background: #0f6c79;
     color: #ffffff;
     border-color: #06ae65;
     text-decoration: none;
@@ -73,9 +113,50 @@ section {
 
 .section-b-li {
     width: 80%;
+    border: 1px solid #0c5e69;
+    padding: 10px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
     text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: -1px -1px 10px 2px #012b30;
+}
+
+.section-c-content {
+    padding-top: 20px;
+    min-height: 600px;
+    max-height: 650px;
+    background: linear-gradient(#0c5e69 0%, #0c5e69 20rem, transparent 20rem);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+}
+
+.section-c-ul {
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.section-c-li {
+    min-width: 400px;
+    max-width: 400px;
+    max-height: 600px;
+    background-color: #ffffff;
+    border: 1px solid #0c5e69;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: -1px -1px 10px 2px #012b30;
 }
 
 .box {
@@ -114,7 +195,7 @@ section {
 }
 
 .menu-button:hover {
-    background: #06ae65;
+    background: #0f6c79;
     color: #ffffff;
     border-color: #06ae65;
     text-decoration: none;
@@ -137,7 +218,7 @@ li {
 }
 
 .li-text {
-    color: #595555;
+    color: #0c5e69;
     text-align: center;
 }
 
@@ -160,28 +241,3 @@ li a:hover {
     border-color: #ffffff;
     text-decoration: underline;
 }
-
-h1 {
-    color: #0c5e69;
-    text-align: center;
-    font-size: 34px;
-}
-
-h2 {
-    color: #595555;
-    text-align: center;
-}
-
-.p-18-center {
-    color: #0c5e69;
-    text-align: center;
-    font-size: 18px;
-    margin-top: 0px;
-}
-
-.p-20-just {
-    color: #595555;
-    text-align: justify;
-    font-size: 20px;
-}
-
